# slack-attendance-report

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml
lambda/: attendance.py  sample.py
slack_attendance_report/: slack_attendance_report_stack.py
src/: hello.py  invoke.py
